# jeeves

./: MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  install.rst  tutorial.rst
python/jeeves/: __init__.py  container.py  database.py  datamodel.py  jeeves.py  registry.py  utils.py
