[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "jeeves"
version = "1.0.0"
dependencies = [
  "scipy",
  "numpy",
  "matplotlib",
  "astropy",
  "dill",
  "dlnpyutils",
  "sphinx-astropy",
]
requires-python = ">=3.11"
authors = [
  {name = "David Nidever", email = "dnidever@montana.edu"},
]
maintainers = [
  {name = "David Nidever", email = "dnidever@montana.edu"}
]
description = "Data Butler"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["software","pipeline","data management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.optional-dependencies]
gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

[project.urls]
#Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/dnidever/jeeves"
#Issues = "https://github.com/dnidever/jeeves/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
